# Data-science

./: .fdignore  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  GPR_Optimization.py  Makefile  README.md  README_archived.md  contribution.md  docker.yml  environment.yml  export_notebook.sh  getme.yml  how_to_write_good_articles.md  index.html  publish_marimo.md  pyproject.toml  requirements.txt  test.yml  upload.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: article_topic.md
.github/workflows/: deploy.yml  publish-marimo.yml
applications/: .gitignore  bored_app.py
applications/bore_app/: extract_books.py  main.py
applications/notion_examples/: add_new.py  (+2 more)
data_science_tools/: .gitignore  Hyperdash.ipynb  Yellowbrick.ipynb  atoti.ipynb  blob_datapane.ipynb  duckdb.ipynb  embed_charts.ipynb  faker.ipynb  fugueSQL.ipynb  fugue_bigquery.ipynb  jupyternotebook_cloud.ipynb  marimo_demo.py  narwhals.py  narwhals_row_ordering.html  narwhals_row_ordering.py  pandas-vs-polars-api-comparison-code-examples.ipynb  pandas_api_on_spark.py  polars_vs_pandas.html  polars_vs_pandas.ipynb  polars_vs_pandas.py  pyspark_parametrize.py  schema.ipynb  strip_interactive_example.py  sympy_example.ipynb
feature_engineering/: .gitignore  dirty_cat_examples.ipynb  yarl_example.ipynb
langgraph/: Dockerfile  pyproject.toml
langgraph/src/ai/: graph.py
langgraph/src/ai/agents/: math.py  supervisor.py
langgraph/src/ai/tools/: customer.py  kpi.py
langgraph/supervisor-with-agents/: blog-post.md
langgraph/supervisor-with-agents/app/: README.md  docker-compose.yaml
langgraph/supervisor-with-agents/app/src/: main.py  models.py  utils.py
langgraph/supervisor-with-agents/app/src/ai/: config.py  graph.py  utils.py
langgraph/supervisor-with-agents/app/src/ai/agents/: customer.py  humor.py  report.py
langgraph/supervisor-with-agents/app/src/ai/models/: customer.py  humor.py  kpi.py
langgraph/supervisor-with-agents/app/src/ai/tools/: calculator.py  equations.py  jokes.py  memory.py  nlp.py  statistics.py
langgraph/supervisor-with-agents/app/src/repositories/: customer.py  kpi.py
llm/: diffbot-llm.py  diffbot_llm.html  diffbot_llm.py  langchain_ollama_guide.md  lchain_deepseek.html  lchain_deepseek.py  lchain_ollama.html  lchain_ollama.py  pydantic_ai_examples.py
machine-learning/: SVM_Separate_XOR.ipynb  comparison_table.pkl  cuml.ipynb  cuml_more_gpu.ipynb  gpr_optimization.html  gpr_optimization.py  render.html
marimo_notebooks/: index.html
mathematical_programming/: .gitignore  production_and_inventory.ipynb
nlp/: .gitignore  PyTorch.ipynb  convolutional_neural_network.ipynb  process_text.ipynb  textblob.ipynb  tweets_tokenize.ipynb  word2vec.ipynb
productive_tools/: deepdiff_example.ipynb  pipe.ipynb  pregex.ipynb
public/: GPR_Optimization.html  index.html  temp.html
python/: 4_pandas_lesser_know_tricks-datapane.ipynb  4_pandas_lesser_know_tricks.ipynb  Numpy_tricks.ipynb  Time.ipynb  decorator.ipynb  dictionary.ipynb  dictionary_ifelse.ipynb  four_numpy_methods.ipynb  functools example.ipynb  keep_track.ipynb  knockknock_example.py  lambda.ipynb  pydash.ipynb  zip.ipynb
scraping/: .gitignore  scrape_top_github.ipynb
scripts/: generate_index.py  remove_markdown.py
statistics/: .gitignore  ANOVA_examples.ipynb  bayesian_theorem.ipynb  patsy_example.ipynb
time_series/: .gitignore  extract_date_features.ipynb
visualization/: .gitignore  altair.ipynb  analyze_artificial_intelligence_industry.ipynb  analyze_data_science_market.ipynb  data_science_bootcamp.ipynb  ipyvizzu.ipynb  statsannotation_example.ipynb
(+442 files in other folders)
