[project]
name = "data-science"
version = "0.1.0"
description = "A collection of data science blog posts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "marimo>=0.13.7",
    "markdownify>=1.1.0",
    "nbformat>=5.10.4",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "pgvector>=0.4.1",
    "pre-commit>=4.2.0",
    "psycopg2>=2.9.10",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = []

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.lint]
ignore = ["E501", "F841", "B018", "E101", "W191", "W291"]
select = ["B","C","E","F","W","B9", "I", "Q"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.marimo.runtime]
dotenv = [".env"]
